Fix bung on Social (SOC-137) [space][member] member tab dispalays not well when has invited user or pending use; (SOC-118) [people][profile] don't show information about user's position on IE6; (SOC-138) [space][application] not show message when list of AddAplication is null on IE6; (SOC-148) [space] don't show mess and Link text on the list of your space at the first time on IE6

--- a/portlet/profile/src/main/webapp/skin/portal/webui/component/UIMainProfilePortlet/DefaultStylesheet.css
+++ b/portlet/profile/src/main/webapp/skin/portal/webui/component/UIMainProfilePortlet/DefaultStylesheet.css
@@ -125,6 +125,7 @@
 	color: #8c8c8e;
   margin-top:0px;
   margin-left:5px;
+  height: 20px;
 }
 
 .UIProfile .ContainerSpace .TitleBar{
